# data-mint

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  blog-post.md  image-prompts.md  launch-kit.md
examples/: quickstart.py  sample_schema.json
src/datamint/: __init__.py  cli.py  core.py
tests/: test_core.py  test_integration.py
